adicionando o efeito de cor nos menus categorias

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         text-decoration: none;
         color: white;
     }
+    .row a:hover{
+      color: yellow;
+    }
+
 </style>
 </head>
 
