atualizado as imagens do banner

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/imgs/1.jpeg" class="d-block w-100" alt="...">
+        <img src="assets/imgs/b1.jpeg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/imgs/2.jpeg" class="d-block w-100" alt="...">
+        <img src="assets/imgs/b2.jpeg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/imgs/3.jpeg" class="d-block w-100" alt="...">
+        <img src="assets/imgs/b3.jpeg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -75,7 +75,7 @@
   </div>
 <!--fim do modal-->
 <!--inicio da section-->
-<div class="container-fluid" style="border: 1px solid red; text-align: center; background-color: black; color:white ;" >
+<div class="container-fluid" style=" text-align: center; background-color: black; color:white ;" >
     <h2 class="section-header__title">
     
         <span>Lançamentos</span>
