Adicionando os links das redes sociais

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     </button>
   </div>
 <!--fim do modal-->
-<div class="container-fluid" style="height:100px ;">
+<div class="container-fluid" style="height:110px ;">
 <div class="row">
-  <div class="col">a</div>
-  <div class="col">b</div>
-  <div class="col">b</div>
+  <div class="col" style="text-align: center;"><a href=""><img src="assets/imgs/insta.jpeg" alt=""></a></div>
+  <div class="col"  style="text-align: center;"><a href=""><img src="assets/imgs/tw.jpeg" alt=""></a></div>
+  <div class="col"  style="text-align: center;"><a href=""><img src="assets/imgs/face.jpeg" alt=""></a></div>
 </div>
 
 </div>
@@ -139,6 +139,7 @@
     <div class="col-sm"><img src="assets/imgs/a.jpeg" alt=""></div>
     <div class="col-sm"><img src="assets/imgs/b.jpeg" alt="" srcset=""></div>
     <div class="col-sm"><img src="assets/imgs/c.jpeg" alt=""></div>
+    
   </div>
 </div>
 <div class="container-fluid" style="margin-top: 50px;">
