--- a/index.html
+++ b/index.html
@@ -135,28 +135,31 @@
     </h2>
 </div>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md"><img src="assets/imgs/a.jpeg" alt=""></div>
     <div class="col-md"><img src="assets/imgs/b.jpeg" alt="" srcset=""></div>
     <div class="col-md"><img src="assets/imgs/c.jpeg" alt=""></div>
+    <div class="col-md"><img src="assets/imgs/l1.jpeg" alt=""></div>
     
   </div>
 </div>
-<div class="container" style="margin-top: 50px;">
+<div class="container-fluid" style="margin-top: 50px;">
   <div class="row">
     <div class="col-sm"><img src="assets/imgs/d.jpeg" alt="">
     </div>
     <div class="col-sm"><img src="assets/imgs/e.jpeg" alt="" srcset=""></div>
     <div class="col-sm"><img src="assets/imgs/f.jpeg" alt=""></div>
+    <div class="col-sm"><img src="assets/imgs/l2.jpeg" alt=""></div>
   </div>
 </div>
-<div class="container" style="margin-top: 50px;">
+<div class="container-fluid" style="margin-top: 50px;">
   <div class="row">
     <div class="col-md"><img src="assets/imgs/g.jpeg" alt="">
     </div>
     <div class="col-md"><img src="assets/imgs/h.jpeg" alt="" srcset=""></div>
     <div class="col-md"><img src="assets/imgs/z.jpeg" alt=""></div>
+    <div class="col-md"><img src="assets/imgs/l3.jpeg" alt=""></div>
   </div>
 </div>
 <!--Fim da section-->
