--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="assets/css/estilo.css">
 <link rel="stylesheet" href="assets/css/style.css">
 
+
 <style>
     .row a{
         text-decoration: none;
@@ -19,6 +20,17 @@
     .col li a{
       color: black;
     }
+    @media only screen and (max-width: 700px) {
+    #teste {
+        display: none;
+    }
+    #pic{
+      margin-top: 40px;
+    }
+    #hid{
+      display: none;
+    }   
+}
 
 </style>
 </head>
@@ -31,7 +43,7 @@
         <div class="col-2"><a href=""><img src="assets/imgs/logo.jpg" alt="" ></a></div>
         <div class="col-6"> 
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Busque" aria-label="Search" >
+                <input class="form-control mr-sm-2" id="teste" type="search" placeholder="Busque" aria-label="Search" >
                 
             </form>
         </div>
@@ -122,9 +134,9 @@
 <!--inicio da section-->
 <div class="container-fluid" style="height:110px ;">
 <div class="row">
-  <div class="col" style="text-align: center;"><a href=""><img src="assets/imgs/insta.jpeg" alt=""></a></div>
-  <div class="col"  style="text-align: center;"><a href=""><img src="assets/imgs/tw.jpeg" alt=""></a></div>
-  <div class="col"  style="text-align: center;"><a href=""><img src="assets/imgs/face.jpeg" alt=""></a></div>
+  <div class="col" style="text-align: center;"><a href="https://www.instagram.com/centrallmstore/"><img src="assets/imgs/insta.jpeg" alt=""></a></div>
+  <div class="col"  style="text-align: center;"><a href="https://www.tiktok.com/@centrallmstore"><img src="assets/imgs/tw.jpeg" alt=""></a></div>
+  <div class="col"  style="text-align: center;"><a href="https://www.facebook.com/CentralLMStore"><img src="assets/imgs/face.jpeg" alt=""></a></div>
 </div>
 
 </div>
@@ -136,11 +148,11 @@
 </div>
 </div>
 <div class="container-fluid">
-  <div class="row">
+  <div class="row justify-content-between">
     <div class="col-md"><img src="assets/imgs/a.jpeg" alt=""></div>
-    <div class="col-md"><img src="assets/imgs/b.jpeg" alt="" srcset=""></div>
-    <div class="col-md"><img src="assets/imgs/c.jpeg" alt=""></div>
-    <div class="col-md"><img src="assets/imgs/l1.jpeg" alt=""></div>
+    <div class="col-md azul"  id="pic"><img src="assets/imgs/b.jpeg" alt="" srcset=""></div>
+    <div class="col-md" id="pic"><img src="assets/imgs/c.jpeg" alt=""></div>
+    <div class="col-md" id="pic"><img src="assets/imgs/l1.jpeg" alt=""></div>
     
   </div>
 </div>
@@ -148,23 +160,23 @@
   <div class="row">
     <div class="col-sm"><img src="assets/imgs/d.jpeg" alt="">
     </div>
-    <div class="col-sm"><img src="assets/imgs/e.jpeg" alt="" srcset=""></div>
-    <div class="col-sm"><img src="assets/imgs/f.jpeg" alt=""></div>
-    <div class="col-sm"><img src="assets/imgs/l2.jpeg" alt=""></div>
+    <div class="col-sm" id="pic"><img src="assets/imgs/e.jpeg" alt="" srcset=""></div>
+    <div class="col-sm"id="pic"><img src="assets/imgs/f.jpeg" alt=""></div>
+    <div class="col-sm"id="pic"><img src="assets/imgs/l2.jpeg" alt=""></div>
   </div>
 </div>
 <div class="container-fluid" style="margin-top: 50px;">
   <div class="row">
     <div class="col-md"><img src="assets/imgs/g.jpeg" alt="">
     </div>
-    <div class="col-md"><img src="assets/imgs/h.jpeg" alt="" srcset=""></div>
-    <div class="col-md"><img src="assets/imgs/z.jpeg" alt=""></div>
-    <div class="col-md"><img src="assets/imgs/l3.jpeg" alt=""></div>
+    <div class="col-md" id="pic"><img src="assets/imgs/h.jpeg" alt="" srcset=""></div>
+    <div class="col-md" id="pic"><img src="assets/imgs/z.jpeg" alt=""></div>
+    <div class="col-md" id="pic"><img src="assets/imgs/l3.jpeg" alt=""></div>
   </div>
 </div>
 <!--Fim da section-->
 <hr>
-<div class="container-fluid" style="background-color:black ;">
+<div class="container-fluid" id="hid" style="background-color:black ;">
   <footer>
     <div class="container flexcoluna">
        <div class="footer_menu">
@@ -234,7 +246,7 @@
            </div>
            <div class="footer_areaitem">
             <div class="widget">
-                <div class="widget_title">
+                <div class="widget_title" >
                     <div class="widget_title_text">Faça seu cadastro</div>
                         <div class="widget_title_bar"></div>
                         <div class="twets">
@@ -243,7 +255,7 @@
                                   <form>
                                     <div class="mb-3">
                                       <label for="exampleInputEmail1" class="form-label"></label>
-                                      <input type="email" placeholder="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                      <input type="email" placeholder="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="margin-top: -50px;">
                                       <div id="emailHelp" class="form-text"></div>
                                     </div>
                                     <div class="mb-3">
